data/derived/comb/progs/unify/prog7581.ml.out
Characters 57-58:
  let fixpoint (f,b) = wwhile (let n x =  (f , x = f x) in n,b);;
                                                           ^
Error: This expression has type 'a -> ('a -> 'a) * bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a -> 'a
